<resources>
    <string name="app_name">Top</string>
    <string name="action_settings">Notificacion Local</string>
    <string name="action_firebase">FireBase</string>
    <string name="action_consumo_api">Consumo Api</string>
    <string name="artist.hint.nombre">Nombre</string>
    <string name="artist.hint.orden">Orden</string>
    <string name="artist.hint.apellidos">Apellidos</string>
    <string name="artist.hint.fechaNacimiento">Fecha Nacimiento</string>
    <string name="artist.hint.estatura">Estatura (cm)</string>
    <string name="artist.hint.lugarNacimiento">Lugar Nacimiento</string>
    <string name="artist.hint.notas">Notas</string>
    <string name="addArtist_dialogUrl_title">Añadir Foto desde URL</string>
    <string name="label_dialog_add">Añadir</string>
    <string name="label_dialog_cancel">Cancelar</string>
    <string name="addArtist_error_estaturaMinima">La estatura minima debe ser 50 cm</string>
    <string name="addArtist_error_required">Este campo es requerido</string>
    <string name="title_activity_detalle">Detalle</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="artist.hint.edad">Edad</string>
    <string name="detalle_message_success">Datos Almacenados correctamente</string>
    <string name="detalle_choser_title">Seleccione uno</string>
    <string name="detalle_dialogDelete_title">Eliminar Foto</string>
    <string name="detalle_dialogDelete_message">Esta seguro de eliminar la foto de %s?</string>
    <string name="detalle_dialogDelete_delete">Eliminar</string>
    <string name="main_dialogDelete_title">Eliminar estrella?</string>
    <string name="main_message_delete_success">Estrella eliminada</string>

    <string-array name="lista_genero">
        <item></item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="title_comida_list">Comidas</string>
    <string name="title_comida_detail">Comida Detail</string>
    <string name="comidaList_dialog_title">Mi Perfil</string>
    <string name="comidaList_dialog_ok">OK</string>
    <string name="normal_channel_id">channel.id.notification.normal</string>
    <string name="normal_channel_name">Oferta normal</string>
    <string name="low_channel_id">channel.id.notification.low</string>
    <string name="low_channel_name">Oferta baja</string>

    <string name="main_label_gallery">Galería</string>
    <string name="main_label_camera">Cámara</string>
    <string name="subir">Subir</string>
    <string name="fotografia_message_question_upload">¿Desea subir esta imagen?</string>
    <string name="fotografia_message_upload_success">Imágen subida exitosamente.</string>
    <string name="fotografia_message_done">Listo!!</string>
    <string name="fotografia_message_upload_error">Error al subir  la imágen, intene mas tarde.</string>
    <string name="fotografia_message_delete_success">Imagen eliminada correctamente.</string>
    <string name="fotografia_message_delete_error">Error al eliminar.</string>
    <string name="fotografia_message_error_notFound">La imagen no se pudo cargar.</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="email">Correo</string>
    <string name="provider">Proveedor</string>

    <string name="title_activity_registrar_turno">Registrar Turno</string>
    <string name="dummy_button">Solicitar Turno</string>
    <string name="dummy_content">BIENVENIDO, REGISTRESE Y ESPERE SU TURNO. GRACIAS.</string>

    <string name="facebook_application_id" translatable="false">699376904240468</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb699376904240468</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_phone">Telefono</string>
    <string name="registrarTurno_message_config_remote">Configuración Remota</string>
    <string name="registrarTurno_message_config_local">Configuración Local</string>
    <string name="item_product_count">Nombre:\nCantidad:</string>
    <string name="item_product_data">%s \n(x%d)</string>
    <string name="inventario_error_permission_denied">Lo siento, no tienes permisos para ver el inventario.</string>
    <string name="inventario_error_server">Error en el servidor, intente mas tarde.</string>
    <string name="inventario_error_remove">Lo siento, usted no tiene permiso de eliminar un producto.</string>
    <string name="inventario_dialog_remove_title">Eliminar Producto</string>
    <string name="inventario_dialog_remove_message">Este producto se eliminara de forma permanente.</string>

    <string name="eliminar">Eliminar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addProduct_hint_photoUrl">Url de foto</string>
    <string name="addProduct_hint_name">Nombre</string>
    <string name="addProduct_hint_quantity">Cantidad</string>
    <string name="addProduct_message_validate_max_quantity">El valor debe ser menor a 1000.</string>
    <string name="addProduct_message_added_error">No se pudo guardar, intente mas tarde.</string>
    <string name="addProduct_title">Añadir Producto</string>
    <string name="addProduct_dialog_ok">Añadir</string>
    <string name="addProduct_message_added_successfully">Producto añadido.</string>
    <string name="addProduct_snackbar_action">OK</string>
    <string name="common_validate_field_required">Esta campo es requerido.</string>
    <string name="common_validate_min_quantity">El valor debe ser mayor a 0.</string>
    <string name="detailProduct_update_successfully">Producto Actualizado. ¿Desea ir al listado principal?</string>
    <string name="detailProduct_snackbar_action">Ir</string>
    <string name="detailProduct_update_error">Error al actualizar, intente mas tarde o revise la cantidad.</string>
</resources>
