<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.top.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_firebase"
        android:orderInCategory="200"
        android:title="@string/action_firebase"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_consumo_api"
        android:orderInCategory="300"
        android:title="@string/action_consumo_api"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_comida"
        android:orderInCategory="400"
        android:title="Comida"
        app:showAsAction="never" />
</menu>
