<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MultiLoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgFotoPerfil"
        android:layout_width="@dimen/imagen_login_size"
        android:layout_height="@dimen/imagen_login_size"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@android:color/black"
        app:civ_border_width="3dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imgFotoPerfil"
        app:layout_constraintTop_toBottomOf="@id/imgFotoPerfil"
        style="?android:progressBarStyleHorizontal" />

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/progressBar"
        app:layout_constraintTop_toTopOf="@id/progressBar"
        app:layout_constraintBottom_toBottomOf="@id/progressBar" />

    <TextView
        android:id="@+id/tvNombreUsuario"
        android:hint="@string/nombre_usuario"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvProgress"
        style="@style/TextViewBase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="@dimen/padding_tv"
        app:layout_constraintTop_toBottomOf="@id/tvNombreUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/provider"
        android:padding="@dimen/padding_tv"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

<!--    <com.facebook.login.widget.LoginButton-->
<!--        android:id="@+id/login_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginBottom="30dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvProvider"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>