<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentMain"
    android:padding="@dimen/padding_horizontal"
    tools:context=".addModule.view.AddProductFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhotoUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <EditText
            android:id="@+id/etPhotoUrl"
            android:layout_width="@dimen/add_photo_size_width"
            android:layout_height="wrap_content"
            android:hint="@string/addProduct_hint_photoUrl"
            android:maxLines="1"
            android:inputType="textUri"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/etQuantity" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/add_photo_size_width"
        android:layout_height="@dimen/add_photo_size_heigth"
        android:id="@+id/imgPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPhotoUrl"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:counterMaxLength="@integer/addProduct_max_name"
        app:counterEnabled="true"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tilPhotoUrl"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/addProduct_max_name"
            android:hint="@string/addProduct_hint_name"
            android:inputType="textPersonName|textCapWords"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/etPhotoUrl" />

    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tilPhotoUrl"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        android:layout_marginEnd="10dp" >
        
        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addProduct_hint_quantity"
            android:inputType="number"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>